重新设计容器化底座镜像